namespaces/live.cloud-platform.service.justice.gov.uk/hmpps-user-preferences-preprod/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hmpps-user-preferences-preprod
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "preprod"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "probation_in_court"
    cloud-platform.justice.gov.uk/application: "HMPPS User Preferences"
    cloud-platform.justice.gov.uk/owner: "Prepare a Case for Sentence: prepareacaseforsentence@justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/hmpps-user-preferences"
    cloud-platform.justice.gov.uk/team-name: "probation-in-court"
